# aac-recsys

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
aac_recsys/: __init__.py  config.py  dataset.py  features.py  main.py  metrics.py  plots.py  pre_processing.py  predict.py  ranking.py  rolling_eval.py
aac_recsys/modeling/: predict.py  train.py
aac_recsys/models/: baseline.py  random_forest.py  ranker_base.py
notebooks/: eda_dataset.ipynb  pre_processing.ipynb
reports/: predict_metrics_baseline.csv  predict_user_summary_baseline.csv  predict_window_summary_baseline.csv  rolling_eval_metrics.csv
reports/figures/: table_metrics_by_band.csv  table_train_test_ratio_by_user.csv
